@@ -31,6 +31,7 @@
                     <executable>java</executable>
                     <arguments>
                         <argument>-Djava.library.path=${project.basedir}/../../target/release</argument>
+                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                         <argument>-cp</argument>
                         <classpath/>
                         <argument>Main</argument>
